// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph bold 1`] = `
<p
  class="sc-dkzDqf bAZhzJ"
>
  Heller UI
</p>
`;

exports[`Paragraph default 1`] = `
<p
  class="sc-bczRLJ BEsZF"
>
  Heller UI
</p>
`;

exports[`Paragraph dynamic color 1`] = `
<p
  class="sc-bczRLJ eKyWXa"
  color="deeppink"
>
  Heller UI
</p>
`;

exports[`Paragraph italic & bold 1`] = `
<p
  class="sc-hKMtZM iAviBA"
>
  Heller UI
</p>
`;

exports[`Paragraph italic 1`] = `
<p
  class="sc-gsnTZi dmboij"
>
  Heller UI
</p>
`;
